<resources>
    <string name="app_name">ChibiLoop</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_add">Add</string>
    <string name="title_account">Account</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="or_option">or</string>
    <string name="logo_description">ChibiLoop Logo</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="sing_in_with_google">SIGN IN WITH GOOGLE</string>

</resources>
