<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.floresvanessa.chibiloop.LoginActivity"
    android:id="@+id/login_scrollview">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <!-- ImageView with ChibiLoop Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorAccent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/logo_description"/>

        <!-- Email Field -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/hold_email_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Field -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/hold_password_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hold_email_field"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <EditText
                android:id="@+id/hold_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>
        </android.support.design.widget.TextInputLayout>


        <!-- Sign In Button -->
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hold_password_field"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="12dp"
            android:text="@string/sign_in"/>

        <!-- Create Account Link -->
        <TextView
            android:id="@+id/link_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/no_account_yet"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
            android:textAlignment="center"/>

        <LinearLayout
            android:id="@+id/divider"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link_create_account">
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Divider"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_option"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="?android:attr/listDivider"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Divider"
                android:layout_weight="2"/>
        </LinearLayout>

        <!-- Sign in with Google Button -->
        <Button
            android:id="@+id/google_sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="12dp"
            android:text="@string/sing_in_with_google"/>



    </android.support.constraint.ConstraintLayout>

</ScrollView>
